# rep2nb

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
rep2nb/: __init__.py  analyzer.py  cli.py  config.py  discovery.py  graph.py  notebook_builder.py  transformer.py
tests/: test_rep2nb.py
tests/fixtures/docstring_repo/: main.py  utils.py
tests/fixtures/external_deps_repo/: main.py  model.py
tests/fixtures/file_io_repo/: analyze.py  generate.py
tests/fixtures/multi_dep_repo/: config.py  data.csv  data_processor.py  helpers.py  main.py
tests/fixtures/package_repo/: main.py
tests/fixtures/package_repo/mypackage/: __init__.py  core.py  utils.py
tests/fixtures/sections_repo/project_a/: helpers.py  main.py
tests/fixtures/sections_repo/project_b/: helpers.py  main.py
tests/fixtures/simple_repo/: README.md  main.py  utils.py
