[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rep2nb"
version = "0.1.0"
description = "Convert a Python repository into a single executable Jupyter notebook"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "tye" }]
keywords = ["jupyter", "notebook", "converter", "repository", "hackathon", "ipynb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = ["nbformat>=5.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]

[project.scripts]
rep2nb = "rep2nb.cli:main"

[project.urls]
Homepage = "https://github.com/tye/rep2nb"
Issues = "https://github.com/tye/rep2nb/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
